add game dependency to pom

--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>game</groupId>
+      <artifactId>game</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
